--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "goit-react-hw-02-phonebook",
   "version": "0.1.0",
+  "homepage": "https://Bohdan-Dachkovsky.github.io/goit-react-hw-02-phonebook",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,10 +12,13 @@
     "uuid": "^8.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "eslintConfig": {
     "extends": "react-app"
